--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,64 +1,60 @@
-.section-header{
-  overflow:hidden;
+/* header样式 */
+.header{
+  width: 100%l;
+  height: 90%;
+}
+.header_my{
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  margin-top:100rpx;
-  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  background-color: gainsboro;
 }
-.avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin:40rpx 0 100rpx;
-  border-radius: 50%;
-  background-size:cover;
+.header_edit{
+  font-size: 80rpx;
+  color:darkgray;
+  width:66rpx;
+  line-height: 60px;
 }
-.section{
-    overflow:hidden;
-    display:flex;
-    flex-direction:column;
-    padding:0 20rpx;
+.header_background{
+  margin-top: 13px;
+  background-color: gainsboro;
+  width: 100%;
+  height:74%;
+  border-radius: 5%;
 }
-.item{
-    display:flex;
-    flex:1;
-    flex-direction:row;
-    height:60rpx;
-    line-height:60rpx;
-    margin-bottom:40rpx;
-    font-size:28rpx;
-    box-sizing:border-box;
+.header_my icon{
+  margin-top: 15px;
+  margin-left: 6px;
 }
-.color{
-    color:#ddd;
+.header_my text{
+  font-weight: 700;
 }
-.item .user, .item .pwd, .item .sex, .item .remeber{
-    flex:2;
-    text-align:right;
-    margin-right:20rpx;
+.header_my_text1{
+  line-height: 60px;
+  font-size:40rpx;
+  color: red;
 }
-.item input, .item radio-group, .item switch{
-    flex:8;  
+.header_my_text2{
+  line-height: 24px;
+  font-size:35rpx;
+  color: black;
 }
-.item input{
-    padding-left:20rpx;
-    border:1px solid #ddd;
-    border-radius:8rpx;
+.header_line{
+  width: 100%;
+  height:3px;
 }
-.item radio-group label{
-    margin-right:20rpx;
+/* footer样式 */
+.footerf_btn{
+  bottom:2px;
 }
-.item-btn{
-    padding-top:40rpx;
-    text-align:center;
+.footer_btn_newad{
+  font-size: 50rpx;
+  background-color: yellowgreen;
+  color: aliceblue;
 }
-.item-btn button{
-    display:inline-block;
-    width:200rpx;
-    height:60rpx;
-    margin:0 10rpx;
-    line-height:60rpx;
-    font-size:32rpx;
-    color:#fff;
-    background:green;
-    cursor:pointer;
+.footer_btn_hover{
+  background-color: whitesmoke;
+  color:yellowgreen;
+  font-size: 50rpx;
 }
