--- a/pages/template/index.wxml
+++ b/pages/template/index.wxml
@@ -1,7 +1,7 @@
-<!--今日头条-->
-<template name="header-list">
+ <!--指纹密码锁-->
+ <template name="header-list">
     <block wx:for="{{headerList}}" wx:for-index="index" wx:for-item="vo">
-        <navigator url="../news/news?id={{vo.id}}&image={{vo.images}}">
+        <navigator url="../news/news?id={{vo.id}}">
             <view class="item">
             <image src="{{vo.images}}" mode="aspectFill"/>
             <text>{{vo.title}}</text>
@@ -9,3 +9,25 @@
         </navigator>
     </block>
 </template>
+<!--智能家居-->  
+<template name="middle-list">
+    <block wx:for="{{middleList}}" wx:for-index="index" wx:for-item="vo">
+        <navigator url="../news/news?id={{vo.id}}&image={{vo.images}}">
+            <view class="item">
+            <image src="{{vo.images}}" mode="aspectFill"/>
+            <text>{{vo.title}}</text>
+            </view>
+        </navigator>
+    </block>
+</template> 
+<!--酒店管理系统-->
+<template name="footer-list">
+    <block wx:for="{{footerList}}" wx:for-index="index" wx:for-item="vo">
+        <navigator url="../news/news?id={{vo.id}}&image={{vo.images}}">
+            <view class="item">
+            <image src="{{vo.images}}" mode="aspectFill"/>
+            <text>{{vo.title}}</text>
+            </view>
+        </navigator>
+    </block>
+</template> 
